--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "^5.20.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
-    "prisma": "^5.20.0"
+    "prisma": "^5.20.0",
+    "zod": "^3.23.8"
   }
 }
