--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xpress-cms-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "engines": {
     "node": ">=20.0.0"
   },
