--- a/package.json
+++ b/package.json
@@ -18,18 +18,24 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.7.4",
-    "express": "^4.21.0",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.7",
     "typescript": "^5.6.2"
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^5.20.0",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   }
 }
