--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/node": "^22.7.4",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.7",
     "typescript": "^5.6.2"
@@ -41,6 +43,8 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^5.20.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   }
