--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^10.0.0",
+    "@types/winston": "^2.4.4",
     "nodemon": "^3.1.7",
     "typescript": "^5.6.2"
   },
@@ -46,6 +47,7 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^10.0.0",
+    "winston": "^3.14.2",
     "zod": "^3.23.8"
   }
 }
